applications/mongo-express/templates/traefik-ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  name: mongo-express
  namespace: mongo-express
spec:
  entryPoints:
    - web
  routes:
  - kind: Rule
    match: Host(`mongo.kind.shokohsc.home`)
    priority: 0
    services:
    - kind: Service
      name: mongo-express
      port: 8081
